@@ -80,6 +80,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #12012: ssl.PROTOCOL_SSLv2 becomes optional.
+
 - Issue #11164: Remove obsolete allnodes test from minidom test.
 
 - Issue #11927: SMTP_SSL now uses port 465 by default as documented.  Patch
